fix text align

--- a/client/src/app/components/information-box/information-box.component.scss
+++ b/client/src/app/components/information-box/information-box.component.scss
@@ -69,6 +69,7 @@ $primary-color: #1b5e20;
         }
 
         #time-left-container {
+            text-align: center;
             #time-left {
                 font-size: 2em;
                 font-weight: 500;
